--- a/LMS/src/main/resources/templates/index.html
+++ b/LMS/src/main/resources/templates/index.html
@@ -1,12 +1,21 @@
-<!DOCTYPE HTML>
+    <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Library Management System</title>
-    
-    <h1>Library Management System</h1>
-    
-    <br> <br> <br> <br> <br>
-
-
+      <title>Category</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+</head>
+<body>
+ <a href="http://localhost:8080/book">Book</a>
+ <br><br>
+ <a href="http://localhost:8080/category">Category</a>
+ <br><br>
+ <a href="http://localhost:8080/author">Author</a>
+ <br><br>
+ <a href="http://localhost:8080/publisher">Publisher</a>
+  <br><br>
+ <a href="http://localhost:8080/librarian">Librarian</a>
+  <br><br>
+ <a href="http://localhost:8080/member">Member</a>
 </body>
 </html>
+
