--- a/LMS/src/main/resources/templates/book.html
+++ b/LMS/src/main/resources/templates/book.html
@@ -1,34 +1,47 @@
-<!--     <!DOCTYPE HTML> -->
-<!-- <html xmlns:th="http://www.thymeleaf.org"> -->
-<!-- <head> -->
-<!--       <title>LMS</title> -->
-<!--     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /> -->
-<!-- </head> -->
-<!-- <body> -->
-<!--     <h1>Library Management System</h1> -->
-<!--     <form action="/books" method="post" title="Add a book"> -->
-<!--     	<h3>Add a book</h3> -->
-<!--     	<p>Title: <input type="text" name="title"/></p> -->
-<!--     	<p>ISBN: <input type="text" name="isbn"/></p> -->
-<!--     	<select th:field="*{ID}"> -->
-<!--   	<option  -->
-<!--       th:each="author: ${allAuthors}" -->
-<!--       th:value="${author.ID}" -->
-<!--       th:text="${author.name}" > -->
-<!--     </option> -->
-<!-- 		</select> -->
-<!--     	<p>Publisher: <input type="text" name="publisher"/></p> -->
-<!--     	<p>Shelf: <input type="text" name="shelf"/></p> -->
-<!--     	<p>Status: <input type="text" name="status"/></p> -->
-<!--     	<p>Edition: <input type="text" name="edition"/></p> -->
-<!--     	<p>Reference ex: <input type="checkbox" name="referenceEx"/></p> -->
-<!--     	<p>Purchase date: <input type="text" name="purchaseDate"/></p> -->
-<!--     	<p>Description: <input type="text" name="description"/></p> -->
-<!--         <p><input type="submit" value="Add" /> <input type="reset" value="Reset" /></p> -->
-<!--     </form> -->
-<!-- </body> -->
-<!-- </html> -->
+    <!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org">
+<head>
+      <title>LMS</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+</head>
+<body>
+    <h1>Book</h1>
+<!--     <form action="/book" method="post" title="Add a book"> -->
+        <form th:action="@{/book}" method="post">
+    	<h3>Add a book</h3>
+    	<p>Title: <input type="text" name="title"/></p>
+    	<p>ISBN: <input type="text" name="ISBNNo"/></p>
+    		<p>Author: 
+    		<select>
+    			<option th:each="author: ${allAuthors}" 
+    				th:value="${author.ID}"	
+    				th:text="${author.firstName}">
+      			</option>
+			</select></p>
+    		<p>Category: 
+    		<select>
+    			<option th:each="publisher: ${allPublishers}" 
+    				th:value="${publisher.ID}"	
+    				th:text="${publisher.name}">
+      			</option>
+			</select></p>
+    	<p>Category: 
+    		<select>
+    			<option th:each="category: ${allCategories}" 
+    				th:value="${category.ID}"	
+    				th:text="${category.name}">
+      			</option>
+			</select></p>
+    	<p>Shelf: <input type="text" name="shelf"/></p>
+    	<p>Status: <input type="text" name="status"/></p>
+    	<p>Edition: <input type="text" name="edition"/></p>
+    	<p>Reference ex: <input type="checkbox" name="RefBook" value="True"/></p>
+    	<p>Purchase date: <input type="date" name="dateOfPurchase"/></p>
+    	<p>Description: <input type="text" name="description"/></p>
+        <p><input type="submit" value="Add" /> <input type="reset" value="Reset" /></p>
+        
+ 		
+    </form>
+</body>
+</html>
 
-
-<!-- </body> -->
-<!-- </html> -->
