--- a/LMS/src/main/resources/templates/book.html
+++ b/LMS/src/main/resources/templates/book.html
@@ -18,7 +18,7 @@
     				th:text="${author.firstName}">
       			</option>
 			</select></p>
-    		<p>Category: 
+    		<p>Publisher: 
     		<select>
     			<option th:each="publisher: ${allPublishers}" 
     				th:value="${publisher.ID}"	
