--- a/LMS/src/main/resources/templates/author.html
+++ b/LMS/src/main/resources/templates/author.html
@@ -10,11 +10,8 @@
     	<h3>Add an author</h3>
     	<p>First name: <input type="text" name="firstName"/></p>
     	<p>Last name: <input type="text" name="lastName"/></p>
+    	<p>Birth date: <input type="date" name="birthDate"/></p>
         <p><input type="submit" value="Add" /> <input type="reset" value="Reset" /></p>
     </form>
-</body>
-</html>
-
-
 </body>
 </html>
