--- a/LMS/src/main/resources/templates/member.html
+++ b/LMS/src/main/resources/templates/member.html
@@ -1,22 +1,21 @@
     <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-      <title>Member</title>
+      <title>Register Account</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-    <h1>Member</h1>
+    <h1>Register an account</h1>
     <form action="/member" method="post" title="Add a member">
-    	<h3>Add a member</h3>
+    	<p>Email(Username): <input type="email" name="email"/></p>
+    	<p>Password: <input type="password" name="password"/></p>
     	<p>First name: <input type="text" name="firstName"/></p>
     	<p>Last name: <input type="text" name="lastName"/></p>
     	<p>Address: <input type="text" name="address"/></p>
+    	<p>Zip code: <input type="text" name="zipCode"/></p>
+    	<p>City: <input type="text" name="city"/></p>
     	<p>Phone number: <input type="text" name="phoneNo"/></p>
-        <p><input type="submit" value="Add" /> <input type="reset" value="Reset" /></p>
+        <p><input type="submit" value="Register" /> <input type="reset" value="Reset" /></p>
     </form>
-</body>
-</html>
-
-
 </body>
 </html>
